数据分析 积分榜 没数据的时候显示 暂无数据 & 个人资料 上传头像

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <!-- 修改头像 -->
     <string name="contest_camera">拍照</string>
     <string name="contest_photo">从相册选择</string>
+    <string name="icon_post_fail">头像上传失败,请稍后再试!</string>
+    <string name="icon_post_success">设置头像成功!</string>
 </resources>
